//
//  KeyboardButtonIdentifiers.swift
//  NightMatch
//
//  Created by Yu, Jack on 2024/10/25.
//

import Foundation

struct KeyboardButtonIdentifiers {
    static let num_9 = "num_9"
    static let num_8 = "num_8"
    static let num_7 = "num_7"
    static let num_6 = "num_6"
    static let num_5 = "num_5"
    static let num_4 = "num_4"
    static let num_3 = "num_3"
    static let num_2 = "num_2"
    static let num_1 = "num_1"
    static let num_0 = "num_0"
    static let num_dot = "num_dot"
    static let num_power10 = "num_power10"

    static let ok = "ok"
    static let exe = "exe"
    static let ac = "ac"

    static let add = "add"
    static let subtract = "subtract"
    static let multiply = "multiply"
    static let divide = "divide"

    static let fraction = "fraction"
    static let sqrt = "sqrt"
    static let powern = "powern"
    static let powertwo = "powertwo"
    static let lognm = "lognm"

    static let sin = "sin"
    static let cos = "cos"
    static let tan = "tan"
    static let left_bracket = "left_bracket"
    static let right_bracket = "right_bracket"
    static let one_bracket = "one_bracket"

    static let X = "X"
    static let format = "format"
}
