//
//  TopViewIdentifiers.swift
//  NightMatch
//
//  Created by Yu, Jack on 2024/10/25.
//

import Foundation

struct TopViewIdentifiers {
    static let expressionView = "TopView_expressionView"
    static let resultView = "TopView_resultView"
}
